Some refactors.
Project refactored - webapi:
 Some codes are removed.

Project refactored - webapi-impl:
 Some code was changed.